Fixed defects with tasks, external participants

--- a/force-app/main/default/aura/ExternalParticipant/ExternalParticipant.cmp
+++ b/force-app/main/default/aura/ExternalParticipant/ExternalParticipant.cmp
@@ -23,7 +23,7 @@
             <aura:iteration items="{!v.participants}" var="participant">
                 <tr>
                     <td>
-                        {!participant.patientId}
+                        <a>{!participant.patientId}</a>
                     </td>
                     <td>
                         {!participant.firstName} {!participant.lastName}
