--- a/force-app/main/default/aura/TasksTab/TasksTab.cmp
+++ b/force-app/main/default/aura/TasksTab/TasksTab.cmp
@@ -28,7 +28,7 @@
                         <tr>
                             <th>{!$Label.c.Task_Tab_Table_Col_Name}</th>
                             <th class="priority">{!$Label.c.Originator}</th>
-                            <th class="completed-by">{!$Label.c.Complete_By_Date}</th>
+                            <th class="completed-by">{!$Label.c.Due_Date}</th>
                             <th class="completed-by">{!$Label.c.Reminder_Date}</th>
                             <th></th>
                         </tr>
@@ -39,7 +39,7 @@
                                               page="{!if(empty(taskWrapper.openTask.Action_URL__c), 'edit-task?id=' + taskWrapper.openTask.Id, taskWrapper.openTask.Action_URL__c)}"/>
                                 </td>
                                 <td>
-                                    {!taskWrapper.originator}
+                                    {!taskWrapper.openTask.Originator__c}
                                 </td>
                                 <td>
                                     <aura:if isTrue="{!taskWrapper.openTask.Status == 'In Progress'}">
@@ -104,7 +104,7 @@
                                         Ignored
                                     </aura:if>
                                     <aura:if isTrue="{!task.Status == 'Completed'}">
-                                        <ui:outputDate value="{!task.Reminder_Date__c}"/>
+                                        <ui:outputDate value="{!task.Completed_Date__c}"/>
                                     </aura:if>
                                 </td>
                             </tr>
