--- a/force-app/main/default/aura/ParticipantCardHeader/ParticipantCardHeader.css
+++ b/force-app/main/default/aura/ParticipantCardHeader/ParticipantCardHeader.css
@@ -14,6 +14,9 @@
     line-height: 20px;
     margin-top: 5px;
     margin-bottom: 5px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .THIS .objective-section{
     display: flex;
