--- a/force-app/main/default/aura/StudyDetailView/StudyDetailView.cmp
+++ b/force-app/main/default/aura/StudyDetailView/StudyDetailView.cmp
@@ -111,7 +111,7 @@
                                                         {!action.label}
                                                     </button>
                                                 </aura:if>
-                                                <aura:if isTrue="{!action.id == 'share'}">
+                                                <aura:if isTrue="{!and(action.id == 'share',!empty(v.studyDetail.trial.NCT_Number__c))}">
                                                     <div class="share-icons">
                                                         <aura:iteration items="{!v.shareButtons}" var="shareButton">
                                                             <div class="share-ico" id="{!shareButton.id}" onclick="{!c.doAction}">
