Fix padding message in mobile view on dash board resources.

--- a/force-app/main/default/aura/ResourceDashboardCardItem/ResourceDashboardCardItem.css
+++ b/force-app/main/default/aura/ResourceDashboardCardItem/ResourceDashboardCardItem.css
@@ -96,4 +96,7 @@
         height: auto;
         min-height: 200px;
     }
+    .THIS .resource-error-message{
+        padding: 30% 10% 30% 0;
+    }
 }
