--- a/force-app/main/default/aura/HomePageParticipant/HomePageParticipant.cmp
+++ b/force-app/main/default/aura/HomePageParticipant/HomePageParticipant.cmp
@@ -49,7 +49,7 @@
                         <div class="slds-col">
                             <c:OpenTaskPreviewPanel/>
                         </div>
-                        <aura:if isTrue="{!v.participantState.showVisits}">
+                        <aura:if isTrue="{!v.participantState.isPremium}">
                             <div class="slds-col">
                                 <c:UpcomingVisitsPreviewPanel/>
                             </div>
