--- a/force-app/main/default/aura/StudyDocumentContainer/StudyDocumentContainer.css
+++ b/force-app/main/default/aura/StudyDocumentContainer/StudyDocumentContainer.css
@@ -41,6 +41,11 @@
     width: 22px;
 }
 
+.THIS .resources-icon-video {
+    width: 30px;
+    height: 30px;
+}
+
 .THIS .study-document-summary {
     text-align: left;
 }
