add validation rule for Study Document Videos

--- a/force-app/main/default/layouts/Resource__c-Video.layout-meta.xml
+++ b/force-app/main/default/layouts/Resource__c-Video.layout-meta.xml
@@ -131,7 +131,7 @@
                 <field>URL_Part__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Readonly</behavior>
                 <field>Remove_sharing__c</field>
             </layoutItems>
         </layoutColumns>
