--- a/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.cmp
+++ b/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.cmp
@@ -203,7 +203,7 @@
                                     </div>
                                     <div class="slds-col slds-size_1-of-1 slds-medium-size_3-of-12">
                                         <div class="site-sub-header site-distance">
-                                            {!siteWrapper.siteType + ' Site'}
+                                            {!if(!empty(siteWrapper.siteType),siteWrapper.siteType + ' ' + $Label.c.PG_SFS_L_Site,'')}
                                         </div>
                                         <div class="site-sub-header slds-m-topxx-small site-distance">
                                             <aura:unescapedHtml value="{!siteWrapper.formatedDistance}"/>
