--- a/force-app/main/default/aura/RRTopBar/RRTopBar.css
+++ b/force-app/main/default/aura/RRTopBar/RRTopBar.css
@@ -88,6 +88,10 @@
     color: #00C221;
 }
 
+.THIS .pe-button.orange{
+    color: #FFA400;
+}
+
 .THIS .pe-button:active{
     color: rgba(41, 125, 253, 0.8);
     box-shadow: inset 0 0 4px rgba(0,0,0,0.4);
