--- a/force-app/main/default/aura/TaskEdit/TaskEdit.cmp
+++ b/force-app/main/default/aura/TaskEdit/TaskEdit.cmp
@@ -84,7 +84,7 @@
                                     </div>
                                     <div class="pe-button orange" onclick="{!c.doIgnoreTask}">
                                         <div>
-                                            <c:RRIcon iconName="icon-check-circle"/>
+                                            <c:RRIcon iconName="icon-stop" color="orange"/>
                                             {!$Label.c.BTN_Ignore}
                                         </div>
                                     </div>
