--- a/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.cmp
+++ b/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.cmp
@@ -216,7 +216,7 @@
                                             {!siteWrapper.site.Principal_Investigator__r.Account.BillingStreet}
                                     </div>
                                     <div class="site-address slds-m-top--xx-small">
-                                            {!(siteWrapper.site.Principal_Investigator__r.Account.BillingCity + ' ' + siteWrapper.site.Principal_Investigator__r.Account.BillingState + ' ' + siteWrapper.site.Principal_Investigator__r.Account.BillingPostlCode)}
+                                            {!(if(!empty(siteWrapper.site.Principal_Investigator__r.Account.BillingCity),siteWrapper.site.Principal_Investigator__r.Account.BillingCity+',','') + if(!empty(siteWrapper.site.Principal_Investigator__r.Account.BillingState),' ' + siteWrapper.site.Principal_Investigator__r.Account.BillingState+',','') + if(!empty(siteWrapper.site.Principal_Investigator__r.Account.BillingPostalCode),' ' + siteWrapper.site.Principal_Investigator__r.Account.BillingPostalCode,''))}
                                     </div>
                                     </div>
 <!--                                    <div class="slds-col slds-show_medium slds-size_1-of-12">-->
