--- a/force-app/main/default/components/EmailActionBtnText.component
+++ b/force-app/main/default/components/EmailActionBtnText.component
@@ -2,9 +2,9 @@
  - Created by Leonid Bartenev
  -->
 
-<apex:component id="EmailActionBtnText" access="global">
+<apex:component id="EmailActionBtnText" access="global" controller="EmailActionBtnController">
     <apex:attribute name="buttonLabel" type="String" description="" access="global"/>
     <apex:attribute name="buttonURL" type="String" description="" access="global"/>
 
-    {!buttonLabel}: {!if(buttonURL == null, $Label.CommunityURL, buttonURL)}
+    {!buttonLabel}: {!resultURL}
 </apex:component>
