--- a/force-app/main/default/aura/MyReferringClinics/MyReferringClinics.cmp
+++ b/force-app/main/default/aura/MyReferringClinics/MyReferringClinics.cmp
@@ -16,8 +16,10 @@
     <aura:attribute name="filterInfo"               type="Object"                                     access="private"/>
     <aura:attribute name="rpData"               type="Object"                                     access="private"/>
     <aura:attribute name="studySitesForInvitation"  type="List"                                       access="private"/>
+    <aura:attribute name="reqFieldsFilled" type="Boolean" default="false" access="private"/>
     <!--=============================================================================================================-->
     <aura:handler name="change"                     value="{!v.filterInfo.isActive}" action="{!c.showPendingPhysicans}"/>
+    <aura:handler name="change"                     value="{!v.rpData}" action="{!c.checkReqFields}"/>
     <!--=============================================================================================================-->
     <aura:handler event="c:EventCommunityInitialized"               action="{!c.doInit}"/>
     <!--=============================================================================================================-->
@@ -84,10 +86,8 @@
                             {!$Label.c.BTN_Cancel}
                         </button>
                         <button class="apollo-btn primary" onclick="{!c.doInviteRP}"
-                                disabled="{!empty(v.rpData.lastName)||empty(v.rpData.firstName)||
-                                        empty(v.rpData.clinicName)||empty(v.rpData.phone)}"
-                                title="{!(empty(v.rpData.lastName)||empty(v.rpData.firstName)||
-                                        empty(v.rpData.clinicName)||empty(v.rpData.phone))?$Label.c.PG_MRC_RF_Not_all_Req_Fields:''}">
+                                disabled="{!!v.reqFieldsFilled}"
+                                title="{!(!v.reqFieldsFilled)?$Label.c.PG_MRC_RF_Not_all_Req_Fields:''}">
                             {!$Label.c.BTN_Invite}
                         </button>
                     </aura:set>
